# shelter-integration-platform

./: .env.development  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile.test  README.MD  pyproject.toml
.github/workflows/: linting.yaml  tests.yaml
app/: __init__.py
app/controllers/: abrigos.py  atendimentos.py  blueprint_example.py  consentimentos.py  encaminhamentos.py  pessoa.py  pessoa_rua.py  pessoas.py  professional_controller.py  prontuarios.py  vagas.py
app/docs/: README.md  __init__.py  swagger.py
app/models/: __init__.py  abrigo.py  atendimento.py  consentimento.py  encaminhamento.py  pessoa.py  pessoa_rua.py  profissional.py  prontuario.py  vaga.py
infra/: compose.yaml  database.py  erros.py  handlers.py
infra/scripts/: load_database.py  wait_for_db.py
infra/sql/: 001_create_tables.sql  002_drop_tables.sql  003_seed_test_data.sql
tests/: atendimento_test_helpers.py  conftest.py  sample_test.py  test_atendimento.py  test_delete_atendimento.py  test_get_atendimento.py  test_openapi_docs.py  test_post_atendimento.py  test_put_atendimento.py
