[project]
name = "flaskproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "honcho>=2.0.0",
    "mysql-connector-python>=9.6.0",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.3",
    "ruff>=0.14.13",
]

[tool.pytest-watcher]
now = true
clear = true
runner_args = ["-x", "--tb=short", "-v"]
